--- a/spring-shiro/.settings/org.eclipse.wst.common.component
+++ b/spring-shiro/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="spring-shiro">
-        <wb-resource deploy-path="/" source-path="/target/m2e-jee/web-resources"/>
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
         <property name="context-root" value="spring-shiro"/>
         <property name="java-output-path" value="/spring-shiro/target/classes"/>
     </wb-module>
